# gryf-arm-ethernet

./: .gitignore  .gitmodules  CMakeLists.txt  GryfSmart_Config.h  gitignore
.cache/clangd/index/: FreeRTOS.h.62F1D2FEB5ADD28B.idx  FreeRTOSConfig.h.34CC299B8E967934.idx  GryfSmart_Config.h.2C01D04F94902BDD.idx  Hacl_Curve25519_joined.c.EBA689F48DBB31DA.idx  aes.c.14D79B70A84CFB7A.idx  aes.h.4911FF60D839622E.idx  aesce.c.084C54AD21B32793.idx  aesni.c.2E5047E117519F82.idx  aesni.h.43A6624B4FB7A69A.idx  alignment.h.5F670A900772B4D8.idx  analyse.c.2C23B7369C3896D6.idx  analyse.h.FF8146A325C649EC.idx  aria.c.8AAAF9407EEF2E06.idx  asn1.h.E6DE5D2B8A829E96.idx  asn1parse.c.01B8EB707FB813FE.idx  asn1write.c.89990213A9D9BA5C.idx  asn1write.h.FABD804F3F19EEAF.idx  base64.c.490EA8FB882E9255.idx  base64.h.27A5C00162DDD152.idx  base64_internal.h.D9EAE0262A17C744.idx  bignum.c.6A169FEA0EF28296.idx  bignum.h.BD1D20A2439C56FD.idx  bignum_core.c.4D0D8E0E49A5C242.idx  bignum_core.h.3825E55E1434056A.idx  bignum_mod.c.4F8163242638A1F8.idx  bignum_mod.h.B118BD38E7E9258F.idx  bignum_mod_raw.c.5DD8CDC9B3730F0D.idx  block_cipher.c.D6CFCFAAB956C6DF.idx  block_cipher.h.C5E32953D51195BC.idx  block_cipher_internal.h.05C12EBE14AD36F1.idx  bn_mul.h.164E91E40E5FF68A.idx  board_list.h.90FF79F0F34E6B29.idx  build_info.h.888068439115B2C9.idx  build_info.h.BBEDE60E5343E55F.idx  camellia.c.3F6E4527624DA349.idx  ccm.c.B749447E1D469CA1.idx  chacha20.c.A321C1EE3E0F50CA.idx  chacha20.h.4D1755676831F68D.idx  chachapoly.c.D01F89C77ABA6613.idx  chachapoly.h.78E86F9FD35F2D3C.idx  (+265 more)
port/FreeRTOS-Kernel/: FreeRTOSConfig.h  freertos_config.cmake  freertos_hooks.c  freertos_hooks.h
port/ioLibrary_Driver/: board_list.h  port_common.h  wiznet_config.cmake
port/ioLibrary_Driver/inc/: w5x00_spi.h  (+3 more)
port/mbedtls/: ssl_config.h
port/pico-sdk/: pico-sdk-config.cmake
src/: main.c
src/abstract/: abstract_include.cmake  hooks.h
src/hardware/: hardware_include.cmake
src/program_files/: communication.h
src/test/: CMakeLists.txt  test_runner.c
src/test/analyse_test/: analyse_test.h
src/test/parser_test/: parser_test.c  parser_test.h
(+29 files in other folders)
